stdplus_headers += include_directories('.')

install_headers(
    'stdplus/fd/atomic.hpp',
    'stdplus/fd/create.hpp',
    'stdplus/fd/dupable.hpp',
    'stdplus/fd/fmt.hpp',
    'stdplus/fd/gmock.hpp',
    'stdplus/fd/impl.hpp',
    'stdplus/fd/intf.hpp',
    'stdplus/fd/line.hpp',
    'stdplus/fd/managed.hpp',
    'stdplus/fd/mmap.hpp',
    'stdplus/fd/ops.hpp',
    subdir: 'stdplus/fd',
)
