stdplus_headers = [include_directories('.')]

install_headers(
  'stdplus/cancel.hpp',
  'stdplus/exception.hpp',
  'stdplus/flags.hpp',
  'stdplus/handle/copyable.hpp',
  'stdplus/handle/managed.hpp',
  'stdplus/numeric/str.hpp',
  'stdplus/pinned.hpp',
  'stdplus/raw.hpp',
  'stdplus/signal.hpp',
  'stdplus/strconv.hpp',
  'stdplus/util/cexec.hpp',
  'stdplus/util/string.hpp',
  'stdplus/zstring.hpp',
  'stdplus/zstring_view.hpp',
  preserve_path: true)
