stdplus_headers = [include_directories('.')]

install_headers(
  'stdplus/cancel.hpp',
  'stdplus/concepts.hpp',
  'stdplus/exception.hpp',
  'stdplus/flags.hpp',
  'stdplus/function_view.hpp',
  'stdplus/handle/copyable.hpp',
  'stdplus/handle/managed.hpp',
  'stdplus/hash.hpp',
  'stdplus/hash/array.hpp',
  'stdplus/hash/tuple.hpp',
  'stdplus/net/addr/ether.hpp',
  'stdplus/net/addr/ip.hpp',
  'stdplus/net/addr/subnet.hpp',
  'stdplus/numeric/endian.hpp',
  'stdplus/numeric/str.hpp',
  'stdplus/pinned.hpp',
  'stdplus/raw.hpp',
  'stdplus/signal.hpp',
  'stdplus/str/buf.hpp',
  'stdplus/str/cat.hpp',
  'stdplus/str/cexpr.hpp',
  'stdplus/str/conv.hpp',
  'stdplus/str/maps.hpp',
  'stdplus/util/cexec.hpp',
  'stdplus/util/string.hpp',
  'stdplus/variant.hpp',
  'stdplus/zstring.hpp',
  'stdplus/zstring_view.hpp',
  preserve_path: true)
