nobase_include_HEADERS =
pkgconfig_DATA = stdplus.pc
lib_LTLIBRARIES = libstdplus.la
libstdplus_la_SOURCES =
libstdplus_la_LIBADD = $(COMMON_LIBS)

nobase_include_HEADERS += stdplus/exception.hpp

nobase_include_HEADERS += stdplus/fd/base.hpp

nobase_include_HEADERS += stdplus/fd/managed.hpp
libstdplus_la_SOURCES += stdplus/fd/managed.cpp

nobase_include_HEADERS += stdplus/fd/dupable.hpp
libstdplus_la_SOURCES += stdplus/fd/dupable.cpp

nobase_include_HEADERS += stdplus/fd/ops.hpp
libstdplus_la_SOURCES += stdplus/fd/ops.cpp

nobase_include_HEADERS += stdplus/handle/copyable.hpp

nobase_include_HEADERS += stdplus/handle/managed.hpp

nobase_include_HEADERS += stdplus/internal/sys.hpp
libstdplus_la_SOURCES += stdplus/internal/sys.cpp

nobase_include_HEADERS += stdplus/signal.hpp
libstdplus_la_SOURCES += stdplus/signal.cpp

nobase_include_HEADERS += stdplus/test/sys.hpp

nobase_include_HEADERS += stdplus/util/cexec.hpp
